--- a/src/app/bussines/contenido/contenido.component.html
+++ b/src/app/bussines/contenido/contenido.component.html
@@ -115,7 +115,7 @@
                     class="absolute inset-0 bg-gradient-to-br from-blue-400 to-blue-600 rounded-xl blur-sm opacity-30 scale-105">
                 </div>
                 <img [src]="contenido.imagen_url" alt="Imagen"
-                    class="relative z-10 w-72 h-52 object-cover rounded-xl shadow-lg ring-2 ring-blue-300/50" />
+                    class="relative z-10 h-64 w-52 object-cover rounded-xl shadow-lg ring-2 ring-blue-300/50" />
             </div>
 
             <!-- Información con iconos mejorados -->
